[gd_scene load_steps=18 format=2]

[ext_resource path="res://Assets/Font/AtlantisInternational-jen0.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Levels/LevelEditorOptionsPanel.gd" type="Script" id=2]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.498039, 0.498039, 0.498039, 1 )
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 1, 1, 1, 1 )
expand_margin_left = 1.0
expand_margin_top = 1.0
anti_aliasing = false

[sub_resource type="DynamicFont" id=2]
size = 8
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.498039, 0.498039, 0.498039, 1 )
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 1, 1, 1, 1 )
expand_margin_left = 1.0
expand_margin_top = 1.0
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id=4]
content_margin_left = 5.0
content_margin_right = 4.0
content_margin_top = 1.0
content_margin_bottom = 2.0
bg_color = Color( 1, 1, 1, 0.498039 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 2
border_color = Color( 1, 1, 1, 1 )
expand_margin_left = 1.0
expand_margin_right = 1.0
expand_margin_top = 1.0
expand_margin_bottom = 1.0
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id=5]
content_margin_left = 5.0
content_margin_right = 4.0
content_margin_top = 1.0
content_margin_bottom = 2.0
bg_color = Color( 1, 1, 1, 0.627451 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 2
border_color = Color( 1, 1, 1, 1 )
expand_margin_left = 1.0
expand_margin_right = 1.0
expand_margin_top = 1.0
expand_margin_bottom = 1.0
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id=6]
content_margin_left = 5.0
content_margin_right = 4.0
content_margin_top = 1.0
content_margin_bottom = 2.0
bg_color = Color( 1, 1, 1, 0 )
draw_center = false
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 1, 1, 1, 1 )
expand_margin_left = 1.0
expand_margin_right = 1.0
expand_margin_top = 1.0
expand_margin_bottom = 1.0
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id=7]
content_margin_left = 5.0
content_margin_right = 4.0
content_margin_top = 1.0
content_margin_bottom = 2.0
bg_color = Color( 1, 1, 1, 0.392157 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 1, 1, 1, 1 )
expand_margin_left = 1.0
expand_margin_right = 1.0
expand_margin_top = 1.0
expand_margin_bottom = 1.0
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id=8]
content_margin_left = 5.0
content_margin_right = 4.0
content_margin_top = 1.0
content_margin_bottom = 2.0
bg_color = Color( 1, 1, 1, 0.498039 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 1, 1, 1, 1 )
expand_margin_left = 1.0
expand_margin_right = 1.0
expand_margin_top = 1.0
expand_margin_bottom = 1.0
anti_aliasing = false

[sub_resource type="DynamicFont" id=9]
size = 8
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=10]
content_margin_left = 5.0
content_margin_right = 4.0
content_margin_top = 1.0
content_margin_bottom = 2.0
bg_color = Color( 1, 1, 1, 0.498039 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 2
border_color = Color( 1, 1, 1, 1 )
expand_margin_left = 1.0
expand_margin_right = 1.0
expand_margin_top = 1.0
expand_margin_bottom = 1.0
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id=11]
content_margin_left = 5.0
content_margin_right = 4.0
content_margin_top = 1.0
content_margin_bottom = 2.0
bg_color = Color( 1, 1, 1, 0.627451 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 2
border_color = Color( 1, 1, 1, 1 )
expand_margin_left = 1.0
expand_margin_right = 1.0
expand_margin_top = 1.0
expand_margin_bottom = 1.0
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id=12]
content_margin_left = 5.0
content_margin_right = 4.0
content_margin_top = 1.0
content_margin_bottom = 2.0
bg_color = Color( 1, 1, 1, 0 )
draw_center = false
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 1, 1, 1, 1 )
expand_margin_left = 1.0
expand_margin_right = 1.0
expand_margin_top = 1.0
expand_margin_bottom = 1.0
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id=13]
content_margin_left = 5.0
content_margin_right = 4.0
content_margin_top = 1.0
content_margin_bottom = 2.0
bg_color = Color( 1, 1, 1, 0.392157 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 1, 1, 1, 1 )
expand_margin_left = 1.0
expand_margin_right = 1.0
expand_margin_top = 1.0
expand_margin_bottom = 1.0
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id=14]
content_margin_left = 5.0
content_margin_right = 4.0
content_margin_top = 1.0
content_margin_bottom = 2.0
bg_color = Color( 1, 1, 1, 0.498039 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 1, 1, 1, 1 )
expand_margin_left = 1.0
expand_margin_right = 1.0
expand_margin_top = 1.0
expand_margin_bottom = 1.0
anti_aliasing = false

[sub_resource type="DynamicFont" id=15]
size = 12
font_data = ExtResource( 1 )

[node name="LevelEditorOptionsPanel" type="Control"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = -3.8147e-06
margin_top = -81.0
margin_right = 54.0
margin_bottom = 81.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RequirementsPanel" type="Panel" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -27.0
margin_right = 27.0
margin_bottom = 60.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RequirementsContainer" type="VBoxContainer" parent="RequirementsPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 4.0
margin_right = -4.0
margin_bottom = -4.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RequirementsLabel" type="Label" parent="RequirementsPanel/RequirementsContainer"]
margin_top = 2.0
margin_right = 46.0
margin_bottom = 11.0
size_flags_vertical = 0
custom_fonts/font = SubResource( 2 )
text = "Requirements:"
align = 1
valign = 1

[node name="GoalRequirementLabel" type="Label" parent="RequirementsPanel/RequirementsContainer"]
margin_top = 15.0
margin_right = 46.0
margin_bottom = 24.0
size_flags_vertical = 0
custom_fonts/font = SubResource( 2 )
text = "Goal: 0/1"
align = 1
valign = 1

[node name="PlayerRequirementLabel" type="Label" parent="RequirementsPanel/RequirementsContainer"]
margin_top = 28.0
margin_right = 46.0
margin_bottom = 37.0
custom_fonts/font = SubResource( 2 )
text = "Player: 0/1"
align = 1
valign = 1

[node name="PlayablePathRequirementLabel" type="Label" parent="RequirementsPanel/RequirementsContainer"]
margin_top = 41.0
margin_right = 46.0
margin_bottom = 50.0
custom_fonts/font = SubResource( 2 )
text = "Playable: No"
align = 1
valign = 1

[node name="BigPanel" type="Panel" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -27.0
margin_top = -102.0
margin_right = 27.0
custom_styles/panel = SubResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonContainer" type="VBoxContainer" parent="BigPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 4.0
margin_right = -4.0
margin_bottom = -4.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TestLevelButton" type="Button" parent="BigPanel/ButtonContainer"]
margin_left = 3.0
margin_top = 33.0
margin_right = 43.0
margin_bottom = 45.0
rect_min_size = Vector2( 40, 0 )
size_flags_horizontal = 4
size_flags_vertical = 0
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 5 )
custom_styles/focus = SubResource( 6 )
custom_styles/disabled = SubResource( 7 )
custom_styles/normal = SubResource( 8 )
custom_fonts/font = SubResource( 9 )
custom_colors/font_color_disabled = Color( 1, 1, 1, 0.235294 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.941176, 0.941176, 0.941176, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 0.862745 )
disabled = true
text = "Test Level"
__meta__ = {
"_editor_description_": ""
}

[node name="SaveLevelButton" type="Button" parent="BigPanel/ButtonContainer"]
margin_left = 3.0
margin_top = 49.0
margin_right = 43.0
margin_bottom = 61.0
rect_min_size = Vector2( 40, 0 )
size_flags_horizontal = 4
size_flags_vertical = 0
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 5 )
custom_styles/focus = SubResource( 6 )
custom_styles/disabled = SubResource( 7 )
custom_styles/normal = SubResource( 8 )
custom_fonts/font = SubResource( 9 )
custom_colors/font_color_disabled = Color( 1, 1, 1, 0.235294 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.941176, 0.941176, 0.941176, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 0.862745 )
disabled = true
text = "Save Level"
__meta__ = {
"_editor_description_": ""
}

[node name="OpenOptionsPanelButton" type="Button" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -18.1136
margin_right = 17.0
margin_bottom = -1.11362
rect_min_size = Vector2( 17, 0 )
size_flags_horizontal = 4
size_flags_vertical = 0
custom_styles/hover = SubResource( 10 )
custom_styles/pressed = SubResource( 11 )
custom_styles/focus = SubResource( 12 )
custom_styles/disabled = SubResource( 13 )
custom_styles/normal = SubResource( 14 )
custom_fonts/font = SubResource( 15 )
custom_colors/font_color_disabled = Color( 1, 1, 1, 0.235294 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.941176, 0.941176, 0.941176, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 0.862745 )
text = ">"
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="MoveTween" type="Tween" parent="."]
[connection signal="pressed" from="BigPanel/ButtonContainer/TestLevelButton" to="." method="_on_TestLevelButton_pressed"]
[connection signal="pressed" from="BigPanel/ButtonContainer/SaveLevelButton" to="." method="_on_SaveLevelButton_pressed"]
[connection signal="pressed" from="OpenOptionsPanelButton" to="." method="_on_OpenOptionsPanelButton_pressed"]
